<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <EditText
                        android:id="@+id/LoginID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/ic_account_circle_black_24dp"
                        android:drawableTint="@color/black"
                        android:hint="@string/login_id"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorPrimaryLight"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/ic_lock_outline_black_24dp"
                        android:drawableTint="@color/black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorPrimaryLight"
                        tools:targetApi="m" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button"
                style="@style/ButtonBottomAligned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>